--- a/TELA DE OPções/BotoesDeEnvio.xaml
+++ b/TELA DE OPções/BotoesDeEnvio.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="BotoesDeEnvio" Height="400" Width="400">
     <StackPanel Background="White">
-        <local:BotaoPesquisar x:Name="botao" NormalImage ="/imagens2/impressora.png" TextoPrincipal="IMPRIMIR" TextoSecundario="F1" CorPrincipal="#0275d8" CorSecundaria="White" Height="70" Width="200"/>            
-        <local:TextBoxPadrao Margin="10" Titulo="Nome do cliente"/>
+        <local:BotaoPesquisar x:Name="botao" NormalImage ="/imagens2/impressora.png" TextoPrincipal="IMPRIMIR" TextoSecundario="F1" CorPrincipal="#0275d8" CorSecundaria="White" Height="70" Width="200"/>
+        <local:TextBoxPadrao Margin="10" Titulo="Nome"  CampoObrigatorio="True"/>
+        <local:TextBoxPadrao Margin="10" Titulo="Sobrenome" CampoObrigatorio="False"/>
     </StackPanel>
 </Window>
